Istio/Traffic-Management-Basics/02-demoapp-subset/deploy-demoapp-v21.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: demoapp
    version: v2.1
  name: demoappv21
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
        version: v2.1
    spec:
      containers:
      - image: vvoo/demoapp:v2.1
        imagePullPolicy: IfNotPresent
        name: demoapp
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
